feat(friend): retrieve invitations
