# openapi.json
@@ -13,6 +13,51 @@
     "version": "0.0.1"
   },
   "paths": {
+    "/friend-invitations": {
+      "get": {
+        "tags": [
+          "friend-invitations"
+        ],
+        "operationId": "get_friend_invitations",
+        "parameters": [
+          {
+            "name": "page",
+            "in": "query",
+            "required": true,
+            "schema": {
+              "type": "integer",
+              "format": "int32",
+              "minimum": 0
+            }
+          },
+          {
+            "name": "limit",
+            "in": "query",
+            "required": true,
+            "schema": {
+              "type": "integer",
+              "format": "int32",
+              "minimum": 0
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "List of friend invitations retrieved successfully",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/PaginatedResponse_FriendRequest"
+                }
+              }
+            }
+          },
+          "401": {
+            "description": "Unauthorized"
+          }
+        }
+      }
+    },
     "/friend-requests": {
       "get": {
         "tags": [
